--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,11 +16,7 @@ jobs:
         run: echo "PORT=${{ secrets.PORT }}" >> .env
 
       - name: Login to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: docker build -t konami98/go-app .
